--- a/public_html/content/themes/bradtca/assets/sass/style.scss
+++ b/public_html/content/themes/bradtca/assets/sass/style.scss
@@ -672,6 +672,12 @@ section.single-post {
 	padding: 6px 10px 6px 0;
 }
 
+.page-title {
+	font-size: 60px;
+	line-height: 1.2em;
+	font-weight: 800;
+	margin-top: -20px;
+}
 
 .post-archive {
 	width: 78%;
@@ -686,10 +692,8 @@ section.single-post {
 		min-height: 80px;
 
 		h1 {
-			font-size: 60px;
-			line-height: 1.2em;
 			float: left;
-			font-weight: 800;
+			margin: 0;
 		}
 
 		h2 {
@@ -731,19 +735,7 @@ section.single-post {
 	}
 
 	.paging {
-		overflow: hidden;
 		margin-bottom: 80px;
-		font-weight: 800;
-		font-size: 30px;
-		text-transform: uppercase;
-
-		.older {
-			float: left;
-		}
-
-		.newer {
-			float: right;
-		}
 	}
 
 	.tag-cloud {
@@ -778,6 +770,22 @@ section.single-post {
 		a {
 			
 		}
+	}
+}
+
+.paging {
+	overflow: hidden;
+	margin-bottom: 80px;
+	font-weight: 800;
+	font-size: 30px;
+	text-transform: uppercase;
+
+	.older {
+		float: left;
+	}
+
+	.newer {
+		float: right;
 	}
 }
 
@@ -954,7 +962,18 @@ section.single-post {
 
 				&:hover {
 					+ figcaption {
-						display: none;
+						margin-right: -50%;
+						transition: margin 0.2s ease-in;
+						-webkit-transition: margin 0.2s ease-in;
+						-moz-transition: margin 0.2s ease-in;
+
+						@media screen and (max-width: 880px) {
+							margin: 0;
+							opacity: 0.1;
+							transition: opacity 0.2s ease-in;
+							-webkit-transition: opacity 0.2s ease-in;
+							-moz-transition: opacity 0.2s ease-in;
+						}
 					}
 				}
 			}
@@ -972,6 +991,7 @@ section.single-post {
 			width: 50%;
 			margin-right: -43%;
 			padding: 20px;
+			z-index: 10;
 
 			a {
 				color: #000;
@@ -1008,5 +1028,134 @@ section.single-post {
 				}
 			}
 		}
+	}
+}
+
+.about-page {
+	width: 72%;
+
+	.page-title {
+		margin-bottom: 20px;
+	}
+
+	@media screen and (max-width: 880px) {
+		width: auto;
+	}
+
+	.entry-content {
+		a {
+			white-space: nowrap;
+		}
+	}
+}
+
+.photo-nav {
+	margin-bottom: 20px;
+}
+
+section.photo-set {
+	.desc {
+		margin-bottom: 20px;
+	}
+
+	.photo-list img {
+		margin: 0 10px 10px 0;
+	}
+}
+
+section.photo-sets {
+
+	.subtitle {
+		margin-bottom: 20px;
+	}
+
+	ul.photo-sets {
+		overflow: hidden;
+	}
+
+	.photo-set {
+		float: left;
+		width: 150px;
+		padding: 0 10px 15px 0;
+		font-size: 16px;
+		box-sizing: content-box;
+
+		 a {
+			display: block;
+			color: #333;
+
+			&:hover {
+				color: #666;
+			}
+		}
+
+		 img {
+			display: block;
+			margin-bottom: 5px;
+		}
+
+		 .title {
+			display: block;
+		}
+	}
+}
+
+.photo-collections {
+
+	.collection {
+		margin-bottom: 1.5em;
+
+		a {
+			display: block;
+			color: #333;
+		}
+
+		.thumbs {
+			white-space: nowrap;
+			overflow: hidden;
+			display: block;
+		}
+
+		img {
+			width: 120px;
+			height: 120px;
+			margin-right: 5px;
+		}
+
+		.title {
+			display: block;
+			margin-top: 5px;
+		}
+	}
+}
+
+.single-photo {
+	.date {
+		margin-bottom: 20px;
+	}
+
+	.attachment-large {
+		width: 100%;
+		height: auto;
+	}
+
+	.meta {
+		color: #666;
+		margin-top: 1em;
+		background-color: #eee;
+		padding: 0.6em;
+		font-size: 14px;
+	}
+
+	.meta th {
+		width: 39%;
+		font-weight: normal;
+		text-align: left;
+		vertical-align: top;
+	}
+
+	.meta td {
+		width: 59%;
+		vertical-align: top;
 	}
 }
